# palo_alto_firewall_analyzer

./: .gitignore  PAN_CONFIG.cfg  README.md  pan_analyzer.py  pan_policy_fixer.py  pan_policy_validator.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  python-package.yml  sbom.yml  semgrep.yml  test.yml
palo_alto_firewall_analyzer/: core.py  pan_api.py  pan_api_helpers.py  pan_config.py  pan_helpers.py
palo_alto_firewall_analyzer/fixers/: __init__.py  consolidate_equivalent_objects.py  delete_disabled_policies.py  delete_unused_objects.py  disable_shadowed_rules.py  fix_UnqualifiedFQDN.py  fix_bad_log_setting.py  remove_redundant_rule_addresses.py  (+4 more)
scripts/: pan_disable_rules.py  pan_zone_lookup.py
tests/: test_AddressesShouldBeGroups.py  test_BadGroupProfile.py  test_BadHostname.py  test_BadLogSetting.py  test_EquivalentObjects.py  test_ExtraRules.py  test_ExtraZones.py  test_FQDNContainsIP.py  test_FQDNinIP.py  test_FindConsolidatableAddressesAndGroups.py  test_FindConsolidatableServicesAndGroups.py  test_IPWithResolvingFQDN.py  test_MisleadingAddresses.py  test_MisleadingServices.py  test_MissingZones.py  test_RedundantRuleMembers.py  test_RedundantRuleServices.py  test_RulesMissingSecurityProfile.py  test_ServicesShouldBeGroups.py  test_ShadowingAddressesAndGroups.py  test_ShadowingObjects.py  test_ShadowingRules.py  test_SimilarAddressesAndGroups.py  test_SimilarServicesAndGroups.py  test_SupersedingRules.py  test_UnconventionallyNamedServices.py  test_UnqualifiedFQDN.py  test_UnusedAddressesAndGroups.py  test_UnusedSecurityProfileGroups.py  test_UnusedServices.py
(+79 files in other folders)
